--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -13,9 +13,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "matter-js": "^0.20.0",
     "motion": "^12.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-game-engine": "^1.2.0",
     "react-router-dom": "^7.1.3",
     "styled-components": "^6.1.14"
   },
