--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-game-engine": "^1.2.0",
     "react-router-dom": "^7.1.3",
+    "regenerator-runtime": "^0.14.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
